--- a/docs/out_ptr/reference/out_ptr.adoc
+++ b/docs/out_ptr/reference/out_ptr.adoc
@@ -64,9 +64,7 @@ NOTE: It is typically a user error to reset a `shared_ptr` without specifying a 
 
 `out_ptr_t(Smart& smart, Args&&... args) noexcept;`
 
-- Effects: initializes `s` with `addressof(smart)`, `a` with `std::forward<Args>(args)...`, and initializes `p` to
-* an unspecified value of either `smart` or its value initialization if `std::is_pointer_v<Smart>` is true,
-* otherwise, an unspecified value of either `smart.get()` or its value initialization.
+- Effects: initializes `s` with `addressof(smart)`, `a` with `std::forward<Args>(args)...`, and initializes `p` to its value initialization.
 
 
 NOTE: An unspecified value allows an implementation and subsequent program-defined specializations to use values meaningful to the smart pointer and implementation. The program may not be able to depend on or observe the value of `p` through the conversion operator defined below.
