--- a/docs/out_ptr.adoc
+++ b/docs/out_ptr.adoc
@@ -8,7 +8,7 @@
 //  See http://www.boost.org/libs/out_ptr/ for documentation.
 ////
 
-# boost.out_ptr: the C++11 abstraction for passing smart pointers as parameters to `T**` arguments 
+# boost.out_ptr: the C++11 abstraction for passing smart pointers as parameters to `+T**+` arguments 
 ThePhD
 :toc:
 :toc-placement!:
@@ -19,7 +19,9 @@ ThePhD
 :table-caption: Illustration
 :docinfo: private-footer
 
-This library automates the `.reset(...)` and -- sometimes additionally -- the `.release()` call when interfacing with C-style initialization functions which take an "output parameter" of `T**`. Additional optimizations are implemented within the library to ensure good performance by default for a myriad of types, including `boost::movelib:unique_ptr` and `std::unique_ptr`. It also helps catch small errors in using `shared_ptr`-types reset calls, and works out-of-the-box for many other types including the upcoming `std::retain_ptr`, `boost::intrusive_ptr`, and any other types which follow the `.reset(...)`/`.release()` paradigm (or have constructors that behave similarly).
+This library automates the `.reset(...)` call with `boost::out_ptr::out_ptr(...)` wrapping an argument passed to a C-style function taking a `+T**+` argument. Additionally, it automates the `.release(...)` and `.reset(...)` paradigm with `boost::out_ptr::inout_ptr(...)` in cases where the `+T**+` argument passed to the function will both delete and then allocate the resource being handled.
+
+Additional optimizations are implemented within the library to ensure good performance by default for a myriad of types, including `boost::movelib:unique_ptr` and `std::unique_ptr`. It also helps catch small errors in using `shared_ptr`-types reset calls, and works out-of-the-box for many other types including the upcoming `std::retain_ptr`, `boost::intrusive_ptr`, and any other types which follow the `.reset(...)`/`.release()` paradigm (or have constructors that behave similarly).
 
 toc::[]
 
