--- a/docs/out_ptr/reference/out_ptr.adoc
+++ b/docs/out_ptr/reference/out_ptr.adoc
@@ -102,7 +102,12 @@ return *this;
 
 where `Args` are the arguments stored in `a`.
 
-- Throws: any exceptions thrown by evaluation of Effects. Otherwise, throws nothing.
+- Throws:
+* no exceptions and is `noexcept` if `std::is_pointer_v<Smart>` is true;
+* any exceptions and is conditionally `noexcept` from `s->reset( static_cast<SP>(p), std::forward<Args>(args)... );` if the expression `s->reset(static_cast<SP>(p), std::forward<Args>(args)...)` is well-formed;
+* otherwise, any exceptions and is conditionally `noexcept` from `*s = Smart( static_cast<SP>(p), std::forward<Args>(args)... );`;
+
+where `Args` are the arguments stored in `a`.
 
 
 ### Conversions
